fixed video overlapping yellow overlap for expander title

--- a/assets/scss/app/expander.scss
+++ b/assets/scss/app/expander.scss
@@ -34,7 +34,7 @@ $border-width: 4px;
 	}
 
 	&:focus {
-		border-width: $border-width;
+		outline-width: $border-width;
 	}
 }
 
@@ -56,7 +56,7 @@ $text-margin-left: $arrow-width + (2 * $arrow-margin);
 .expander__item__content {
 	line-height: 1.5em;
 	display: none;
-	margin: 0;
+	margin: $border-width 0 0 0; /** need to add top margin to account for title outline **/
 	p, ul, ol {
 		font-size: 18px;
 	}
